2001-07-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in (add_user): mkdir -p the parent directories
	of the new user.

2001-07-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* users-conf.in (write_logindefs): Old xst_report_warning
	call that slipped.
	Enabled command reporting.
	Removed all global data variables in the backend. Delete
	user no works. Style corrections. This thing is old.

Sun Jul 15 07:46:23 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_parse_table): userifacectl
	reveals if distro is capable of letting mortal users to control
	interface activation.

2001-07-17  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_open_write_compressed): Implement.

	* replace.pl.in (xst_replace_xml_pcdata): Allow compressed files.
	  (xst_replace_xml_attribute): Ditto.

	* xml.pl.in (xst_xml_model_scan): Ditto.

2001-07-16  Hans Petter Jansson  <hpj@ximian.com>

	* print.pl.in (xst_print_printers_get_rh71): Implement.

	* xml.pl.in (xst_xml_read_compressed_file): Implement.
	  (xst_xml_model_scan): Read compressed files.

2001-07-16  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_xml_children): Implement.

	* print.pl.in (xst_print_printers_get): Rename to
	  xst_print_printers_get_rh70. Update tables to use this.

	* replace.pl.in (xst_replace_xml_pcdata): Implement.
	  (xst_replace_xml_attribute): Implement.

Sat Jul 14 11:54:50 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_run): Escape ($) in system call, heheh.

	* network-conf.in (enable_iface): Cosmetic description change.

	* file.pl.in (xst_file_run): Added PATH=$PATH:/sbin:/usr/sbin
	to the running command, as these important routes may not be
	set by the mortal user, and the executed scripts may fail (ie
	debian's ifup/ifdown fail when tool run by normal user).

	* network-conf.in (enable_iface): A directive handler that
	ifup/ifdowns a given interface.