@@ -1,3 +1,9 @@
+2001-07-18  Hans Petter Jansson  <hpj@ximian.com>
+
+	* replace.pl.in (xst_replace_xml_pcdata_with_type): Implement.
+	  (xst_replace_xml_attribute_with_type): Implement. These are helper
+	  functions for alchemist-like XML files.
+
 2001-07-18  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* users-conf.in (add_user): mkdir -p the parent directories
